# LazyFetch

./: CMakeLists.txt  LazyFetch  README.md  go.mod  main.go  readme.md
cmd/: fetch.go  info.go  maksfetch.go
src/: CMakeLists.txt  infostream.cpp  infostream.h  judenfetch.cpp  judenfetch.h  main.hpp
